gha: Add supported features explicitly for profile run
Unlike normal run, Gateway API conformance profile is only run CORE
feature sets, this commit is to explicitly add supported features (e.g.
GatewayHTTPListenerIsolation and GatewayPort8080).

Signed-off-by: Tam Mach <tam.mach@cilium.io>

--- a/.github/workflows/conformance-gateway-api.yaml
+++ b/.github/workflows/conformance-gateway-api.yaml
@@ -265,6 +265,7 @@ jobs:
               --exempt-features "${{ steps.vars.outputs.exempt-features }}" \
               --allow-crds-mismatch \
               --conformance-profiles GATEWAY-HTTP,GATEWAY-TLS,GATEWAY-GRPC,MESH-HTTP,MESH-GRPC \
+              --supported-features GatewayHTTPListenerIsolation,GatewayPort8080 \
               --organization cilium \
               --project cilium \
               --url github.com/cilium/cilium \
